--- a/src/control-ui/index.html
+++ b/src/control-ui/index.html
@@ -14,7 +14,8 @@
           <span id="subtitle">Discord Chat Capture</span>
         </div>
         <div id="controls">
-          <button id="btn-start">Start Capture</button>
+          <button id="btn-start">Open Discord</button>
+          <button id="btn-record" disabled>Begin Recording</button>
           <button id="btn-stop" disabled>Stop</button>
           <select id="output-format">
             <option value="json">JSON Log</option>
@@ -40,7 +41,8 @@
             <li>Click <strong>Start Capture</strong> to open Discord in a browser window</li>
             <li>Log into Discord if needed (your session is saved for next time)</li>
             <li>Navigate to the channel you want to capture</li>
-            <li>The tool will automatically scroll up, taking screenshots and logging messages</li>
+            <li>The chat area will be highlighted &mdash; verify it's correct</li>
+            <li>Click <strong>Begin Recording</strong> to start scrolling and capturing</li>
             <li>Click <strong>Stop</strong> at any time, or let it run until it reaches the top</li>
           </ol>
           <p id="output-info">Output is saved to <code>~/Documents/Dispatch/captures/</code></p>
