UI + build fixes

--- a/src/control-ui/index.html
+++ b/src/control-ui/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dispatch</title>
+    <title>Discatch</title>
     <link rel="stylesheet" href="views://control-ui/style.css" />
   </head>
   <body>
     <div id="app">
       <!-- Phase: idle -->
       <section id="phase-idle" class="phase">
-        <h1>Dispatch</h1>
+        <h1>Discatch</h1>
         <p class="tagline">Discord Chat Capture</p>
         <div class="actions">
           <button id="btn-start" class="btn-primary btn-lg">Open Discord</button>
@@ -27,14 +27,14 @@
 
       <!-- Phase: connecting -->
       <section id="phase-connecting" class="phase hidden">
-        <h1>Dispatch</h1>
+        <h1>Discatch</h1>
         <div class="spinner"></div>
         <p id="connecting-status" class="status-msg">Launching browser...</p>
       </section>
 
       <!-- Phase: ready -->
       <section id="phase-ready" class="phase hidden">
-        <h1>Dispatch</h1>
+        <h1>Discatch</h1>
         <p class="status-msg">Chat area detected. Ready to capture.</p>
         <button id="btn-record" class="btn-go btn-lg">Begin Recording</button>
         <p class="hint">Navigate to the channel you want, then click above.</p>
@@ -42,7 +42,7 @@
 
       <!-- Phase: recording -->
       <section id="phase-recording" class="phase hidden">
-        <h1>Dispatch</h1>
+        <h1>Discatch</h1>
         <div class="live-stats">
           <div class="stat">
             <span id="msg-count" class="stat-value">0</span>
@@ -59,7 +59,7 @@
 
       <!-- Phase: done -->
       <section id="phase-done" class="phase hidden">
-        <h1>Dispatch</h1>
+        <h1>Discatch</h1>
         <p class="done-summary">
           Captured <strong id="done-msgs">0</strong> messages,
           <strong id="done-ss">0</strong> screenshots
